add addPlacemarks from file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/status_bar"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_files"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
