--- a/app/src/main/res/layout/item_xml_file.xml
+++ b/app/src/main/res/layout/item_xml_file.xml
@@ -19,4 +19,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="File #1" />
 
+    <ImageView
+        android:id="@+id/btn_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_more"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
