--- a/app/src/main/res/layout/status_bar.xml
+++ b/app/src/main/res/layout/status_bar.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingVertical="2dp"
-    android:background="@color/purple_200"
+    android:background="@color/teal_700"
     android:orientation="horizontal"
     android:id="@+id/status_bar">
     
