--- a/app/src/main/res/layout/item_xml_file.xml
+++ b/app/src/main/res/layout/item_xml_file.xml
@@ -14,7 +14,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_more"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="File #1" />
